--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,30 @@
+arrow==0.17.0
+attrs==20.2.0
+beautifulsoup4==4.9.3
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+flake8==3.8.4
 idna==2.10
+iniconfig==1.0.1
+lxml==4.5.2
+mccabe==0.6.1
+mypy==0.782
+mypy-extensions==0.4.3
+packaging==20.4
+peewee==3.13.3
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.1.1
+python-dateutil==2.8.1
 requests==2.24.0
+six==1.15.0
+soupsieve==2.0.1
+tabulate==0.8.7
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.25.10
